--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,85 @@
-.backgroundImg {
+/* .app__backgroundImg {
   display: grid;
   background: url("/football1.jpg");
   grid-column: 1/2;
   background-size: cover;
   box-shadow: 10px 0 20px rgba(0, 0, 0, 0.3);
   position: fixed;
-  width: 300px;
+  width: 250px;
   height: 100vh;
 }
 
-.contents {
+.app__contents {
   display: grid;
   grid-column: 2/3;
   box-shadow: -15px 0 20px rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  margin: 0px;
+  padding: 0px;
+} */
+.selectLeague {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 130px 1fr;
+  justify-content: center;
+}
+
+.selectLeague_navigateBar {
+  grid-row: 1/2;
+  padding: 10px;
+  margin-top: 10px;
+  height: 40px;
+  width: 100px;
+  font-size: x-large;
+  font-weight: bolder;
+  text-align: center;
+  justify-self: center;
+}
+
+.selectLeague_navigateBar:hover {
+  border-radius: 20px;
+  background-color: rgb(229, 229, 230);
+}
+
+.selectLeague_news {
+  grid-row: 2/3;
+}
+
+.selectLeague_navigateBar {
+  cursor: pointer;
+  position: relative;
+  background-color: rgb(243, 243, 243);
+  border-radius: 20px;
+  justify-self: center;
+}
+
+.dropdown {
+  position: absolute;
+  top: 100%;
+  left: -300%;
+  background-color: rgb(229, 229, 230);
+  display: none;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+}
+
+.selectLeague_navigateBar:hover .dropdown {
+  display: flex;
+  flex-direction: row;
+}
+
+.dropdown-item {
+  width: 150px;
+  padding: 10px;
+  color: black;
+  font-size: large;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 50px;
+}
+
+.dropdown-item:hover {
+  background: #f0f0f0;
 }
