--- a/src/components/selectLeague/selectLeague.css
+++ b/src/components/selectLeague/selectLeague.css
@@ -1,28 +1,102 @@
-@font-face {
+/* @font-face {
   font-family: "Danjo-bold-Regular";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2307-1@1.1/Danjo-bold-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 
-.imgSize {
-  width: 300px;
+.selectLeague__imgSize {
+  width: 200px;
   height: 200px;
   margin: 100px 100px 50px 100px;
-  border-radius: 10px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* 부드러운 효과 */
+  border-radius: 30px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.imgSize:hover {
+.selectLeague__imgSize:hover {
   transform: scale(1.1);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
-.title {
+.selectLeague__title {
   margin: 50px;
   font-size: 50px;
   font-weight: bolder;
   padding: 100px 0px 0px 50px;
   font-family: "Danjo-bold-Regular";
+} */
+
+/* 뉴스 부분 css  */
+.selectLeague_news {
+  text-align: center;
+}
+
+.selectLeague_news_container {
+  width: 95%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-self: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 5% 4% 2% 4%;
+  border: 2px solid #e5e7eb;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 20px; /* 둥근 모서리 추가 (선택 사항) */
+  box-sizing: border-box;
+  margin-bottom: 40px;
+}
+
+.selectLeague_news_container_box {
+  border-radius: 40px 40px 0px 0px;
+  width: calc(30%);
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.selectLeague_news_container_box-img {
+  width: 100%;
+  border-radius: 40px 40px 0px 0px;
+}
+
+.selectLeague_news_container_box-headline {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.selectLeague_news_container_box-title {
+  background-color: rgb(243, 243, 243);
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.selectLeague_news_container_box-title-headline {
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.selectLeague_news_container_box:hover .selectLeague_news_container_box-title {
+  background-color: rgb(229, 229, 230);
+  cursor: pointer;
+}
+
+.selectLeague_news_container-button {
+  font-size: xx-large;
+  font-weight: bolder;
+  height: 80px;
+  width: 80px;
+  border-radius: 50px;
+  line-height: 80px;
+  background-color: rgb(243, 243, 243);
+}
+
+.selectLeague_news_container-button:hover {
+  background-color: rgb(229, 229, 230);
+  cursor: pointer;
 }
