--- a/src/components/teams/teamsPage.css
+++ b/src/components/teams/teamsPage.css
@@ -77,3 +77,9 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
 }
+.selectLeague {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 130px 1fr;
+  justify-content: center;
+}
