--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,14 @@
-/* .app__backgroundImg {
-  display: grid;
-  background: url("/football1.jpg");
-  grid-column: 1/2;
-  background-size: cover;
-  box-shadow: 10px 0 20px rgba(0, 0, 0, 0.3);
-  position: fixed;
-  width: 250px;
-  height: 100vh;
-}
-
-.app__contents {
-  display: grid;
-  grid-column: 2/3;
-  box-shadow: -15px 0 20px rgba(0, 0, 0, 0.5);
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin: 0px;
-  padding: 0px;
-} */
 .selectLeague {
   height: 100%;
   display: grid;
   grid-template-rows: 130px 1fr;
+  grid-template-columns: 100px 1fr 100px;
   justify-content: center;
 }
 
 .selectLeague_navigateBar {
   grid-row: 1/2;
+  grid-column: 2/3;
   padding: 10px;
   margin-top: 10px;
   height: 40px;
@@ -45,6 +26,7 @@
 
 .selectLeague_news {
   grid-row: 2/3;
+  grid-column: 2/3;
 }
 
 .selectLeague_navigateBar {
@@ -82,4 +64,19 @@
 
 .dropdown-item:hover {
   background: #f0f0f0;
+}
+
+.pageLocation {
+  width: 60px;
+  height: 60px;
+  grid-row: 1/2;
+  grid-column: 3/4;
+  font-size: large;
+  font-weight: bolder;
+  padding: 20px;
+  text-align: center;
+  border-radius: 0px 0px 0px 50px;
+  background-color: rgb(255, 241, 115);
+  box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2);
+  line-height: 50px;
 }
