--- a/src/components/leagues/components/statistics.css
+++ b/src/components/leagues/components/statistics.css
@@ -14,8 +14,8 @@
 }
 
 .statistics-title {
-  padding: 10px;
-  font-size: large;
+  padding: 10px 20px;
+  font-size: x-large;
   font-weight: bold;
   border-radius: 30px;
   background-color: rgb(177, 177, 177);
@@ -44,9 +44,11 @@
 }
 
 .statistics-title-info {
-  margin-left: 81%;
+  padding-left: 81%;
   font-weight: 700;
   font-size: large;
+  border-bottom: 1px solid rgb(220, 220, 220);
+  padding-bottom: 10px;
 }
 
 .league__topPlayer-navigate {
@@ -106,6 +108,11 @@
   margin: 20px;
   align-items: center;
   gap: 20px;
+  cursor: pointer;
+}
+
+.league__topPlayer_box:hover span {
+  font-size: larger;
 }
 
 .league__topPlayer_box-name {
