--- a/src/components/teams/components/teamFixtures.css
+++ b/src/components/teams/components/teamFixtures.css
@@ -1,4 +1,4 @@
-.teamFixtures__boxCss {
+/* .teamFixtures__boxCss {
   border: 2px solid rgb(229, 229, 230);
   background-color: rgb(248, 248, 248);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
@@ -35,13 +35,15 @@
   background-color: rgb(177, 177, 177);
   justify-self: center;
   margin-bottom: 20px;
-}
+} */
 
 /* 팀 경기 */
 .teamFixtures {
   padding: 0px 20px 0px 10px;
   justify-content: center;
 }
+
+/* 
 
 .teamFixturesResult-title {
   padding: 10px;
@@ -93,17 +95,6 @@
   margin: 0px 30px;
 }
 
-.teamFixture_container_box-score:hover {
-  border-bottom: 3px solid black;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.teamFixture_container_box-name:hover {
-  font-weight: bold;
-  cursor: pointer;
-}
-
 .teamFixtures_container_box_button {
   margin-top: 20px;
   padding: 5px;
@@ -112,4 +103,4 @@
 
 .left-name {
   text-align: end;
-}
+} */
