--- a/src/components/teams/components/teamOverview.css
+++ b/src/components/teams/components/teamOverview.css
@@ -1,11 +1,11 @@
-.boxCss {
+/* .boxCss {
   border: 2px solid rgb(229, 229, 230);
   background-color: rgb(248, 248, 248);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   margin: 20px;
   padding: 20px 10px;
   border-radius: 20px;
-}
+} */
 
 .teamOverview {
   display: grid;
@@ -13,25 +13,25 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: start;
 }
-
+/* 
 .teamOverview__statistics {
   grid-row: 1/2;
   grid-column: 1/3;
-}
-
+} */
+/* 
 .teamOverview__leagueCup {
   grid-row: 2/3;
   grid-column: 1/2;
-}
+} */
 
-.teamOverview__fixtures {
+/* .teamOverview__fixtures {
   grid-row: 2/3;
   grid-column: 2/3;
-}
+} */
 
 /* 
 팀 참여 대회 css */
-.teamOverview__leagueCup_container {
+/* .teamOverview__leagueCup_container {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -73,11 +73,11 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   padding: 10px 10px;
   border-radius: 20px;
-}
+} */
 
 /* 
 팀 통계 css */
-
+/* 
 .teamOverview__statistics_container-box {
   display: flex;
   flex-direction: row;
@@ -90,10 +90,11 @@
   font-weight: bolder;
   border-left: 1px solid rgb(177, 177, 177);
   padding-left: 10px;
-}
+} */
 
 /* 
 팀 경기 결과 css */
+/* 
 .teamOverview__fixture_container_box {
   display: flex;
   flex: row;
@@ -140,4 +141,4 @@
   width: 130px;
   text-align: center;
   padding: 7px;
-}
+} */
