--- a/src/components/teams/components/teamTransfer.css
+++ b/src/components/teams/components/teamTransfer.css
@@ -1,8 +1,3 @@
-.transfer_container > div {
-  margin: 20px;
-  padding: 20px;
-}
-
 .transfer_container_box {
   display: flex;
   flex-direction: row;
@@ -10,6 +5,8 @@
   background-color: rgb(248, 248, 248);
   border-radius: 200px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  margin: 20px;
+  padding: 20px;
 }
 
 .transfer_container_box > * {
@@ -25,8 +22,10 @@
 }
 
 .transfer_container_box_infoBox-arrow {
-  font-size: xx-large;
+  box-sizing: border-box;
+  font-size: 50px;
   font-weight: bolder;
+  line-height: 50px;
 }
 
 .transfer_container_box-name {
