--- a/src/components/leagues/components/fixturesComponents/fixturesCard.css
+++ b/src/components/leagues/components/fixturesComponents/fixturesCard.css
@@ -1,27 +1,11 @@
-.fixtures__boxCss {
-  border: 2px solid rgb(229, 229, 230);
-  background-color: rgb(248, 248, 248);
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-  margin: 20px;
-  padding: 20px 10px;
-  border-radius: 20px;
+.fixtures {
+  padding: 0px 20px 0px 10px;
+  display: flex;
+  justify-content: center;
 }
 
-.fixtures__Fixtures-title {
+.fixtures-title {
   padding: 10px 20px;
-  width: 80px;
-  font-size: large;
-  font-weight: bold;
-  border-radius: 30px;
-  background-color: rgb(177, 177, 177);
-  justify-self: center;
-  margin-bottom: 20px;
-}
-
-/* 팀 경기 */
-
-.fixturesResult-title {
-  padding: 10px;
   width: 80px;
   font-size: large;
   font-weight: bold;
@@ -65,10 +49,4 @@
 .fixture_container_box-name:hover {
   font-weight: bold;
   cursor: pointer;
-}
-
-.fixtures_container_box_button {
-  margin-top: 20px;
-  padding: 5px;
-  width: 513.8px;
 }
