--- a/src/components/teams/components/teamOverviewComponent/teamOverviewFixtures.css
+++ b/src/components/teams/components/teamOverviewComponent/teamOverviewFixtures.css
@@ -34,7 +34,7 @@
 .teamOverview__fixture_container_box-score {
   box-sizing: border-box;
   margin-right: 15px;
-  width: 40px;
+  width: 4vw;
   text-align: center;
 }
 
