--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   height: 100%;
   display: grid;
   grid-template-rows: 130px 1fr;
-  grid-template-columns: 100px 1fr 100px;
+  grid-template-columns: 4vw 88vw 8vw;
   justify-content: center;
 }
 
@@ -67,13 +67,14 @@
 }
 
 .pageLocation {
-  width: 60px;
+  top: 0px;
+  right: 0px;
+  width: 4vw;
   height: 60px;
-  grid-row: 1/2;
-  grid-column: 3/4;
+  position: fixed;
   font-size: large;
   font-weight: bolder;
-  padding: 20px;
+  padding: 19px;
   text-align: center;
   border-radius: 0px 0px 0px 50px;
   background-color: rgb(255, 241, 115);
