--- a/src/components/leagues/components/fixturesComponents/fixturesCard.css
+++ b/src/components/leagues/components/fixturesComponents/fixturesCard.css
@@ -1,18 +1,22 @@
+.fixtures__boxsize {
+  width: 40vw;
+}
+
 .fixtures {
-  padding: 0px 20px 0px 10px;
   display: flex;
   justify-content: center;
 }
 
 .fixtures-title {
   padding: 10px 20px;
-  width: 80px;
+  width: 6vw;
   font-size: large;
   font-weight: bold;
   border-radius: 30px;
   background-color: rgb(177, 177, 177);
   justify-self: center;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
+  text-align: center;
 }
 
 .fixture_container_box {
@@ -23,6 +27,7 @@
   height: 60px;
   border-top: 1px solid rgb(186, 182, 182);
   justify-content: center;
+  width: 35vw;
 }
 
 .fixture_container_box-round {
