--- a/src/components/selectLeague/selectLeague.css
+++ b/src/components/selectLeague/selectLeague.css
@@ -28,7 +28,7 @@
   padding: 5% 4% 2% 4%;
   border: 2px solid #e5e7eb;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 20px; /* 둥근 모서리 추가 (선택 사항) */
+  border-radius: 20px;
   box-sizing: border-box;
   margin-bottom: 40px;
 }
