--- a/src/components/teams/components/teamTransfer.css
+++ b/src/components/teams/components/teamTransfer.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 150px;
+  width: 10vw;
 }
 
 .transfer_container_box_infoBox-arrow {
@@ -32,8 +32,8 @@
   font-weight: bolder;
   font-size: larger;
   align-self: center;
-  width: 200px;
-  margin-left: 100px;
+  width: 20vw;
+  margin-left: 8vw;
 }
 
 .transfer_container_box-img {
