--- a/src/components/skeletons/skeletons.css
+++ b/src/components/skeletons/skeletons.css
@@ -22,3 +22,11 @@
     transform: translateX(100%);
   }
 }
+
+@media (max-width: 1480px) {
+  .skeletons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
