--- a/src/components/leagues/components/statistics.css
+++ b/src/components/leagues/components/statistics.css
@@ -3,3 +3,11 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
+
+@media (max-width: 1024px) {
+  .statistics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
