--- a/src/components/leagues/components/statisticsComponents/topPlayerCard.css
+++ b/src/components/leagues/components/statisticsComponents/topPlayerCard.css
@@ -1,3 +1,7 @@
+.topPlayerCard-boxSize {
+  min-width: 600px;
+}
+
 .topPlayerCard-title {
   padding: 10px 20px;
   font-size: x-large;
@@ -28,17 +32,13 @@
   grid-column: 2/3;
 }
 
-.topPlayerCard-boxSize {
-  width: 40vw;
-}
-
 .topPlayerCard-title-info {
+  margin-left: auto;
   text-align: end;
   font-weight: 700;
   font-size: large;
   border-bottom: 1px solid rgb(220, 220, 220);
   padding-bottom: 10px;
-  padding-right: 1vw;
 }
 
 .topPlayerCard__container {
@@ -73,7 +73,8 @@
 
 .topPlayerCard__container_box-goals {
   font-weight: bolder;
-  width: 19vw;
+  margin-left: auto;
+  width: 14vw;
   text-align: end;
 }
 
@@ -95,4 +96,30 @@
 
 .topPlayerCard__container_box-team-name {
   margin: 10px 0px 0px 1vw;
+}
+
+@media (max-width: 770px) {
+  .topPlayerCard-boxSize {
+    min-width: 400px;
+  }
+}
+
+@media (max-width: 480px) {
+  .topPlayerCard__container_box_team-playerImg {
+    border: 3px solid rgb(178, 178, 178);
+    border-radius: 100px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    width: 80px;
+  }
+
+  .topPlayerCard__container_box-name {
+    font-weight: bold;
+    font-size: small;
+    width: 7vw;
+  }
+
+  .topPlayerCard__container_box {
+    margin: 5vw;
+    gap: 5vw;
+  }
 }
