--- a/src/components/teams/components/teamOverviewComponent/teamOverviewFixtures.css
+++ b/src/components/teams/components/teamOverviewComponent/teamOverviewFixtures.css
@@ -35,6 +35,7 @@
   box-sizing: border-box;
   margin-right: 15px;
   width: 4vw;
+  min-width: 40px;
   text-align: center;
 }
 
@@ -53,4 +54,18 @@
   width: 130px;
   text-align: center;
   padding: 7px;
+}
+
+.teamOverview__fixtures-media {
+  width: 42vw;
+}
+
+@media (max-width: 950px) {
+  .teamOverview__fixtures {
+    width: 85vw;
+  }
+
+  .teamOverview__fixtures-media {
+    width: 85vw;
+  }
 }
