--- a/src/components/teams/components/teamOverviewComponent/teamOverviewStatistics.css
+++ b/src/components/teams/components/teamOverviewComponent/teamOverviewStatistics.css
@@ -16,3 +16,23 @@
   border-left: 1px solid rgb(177, 177, 177);
   padding-left: 10px;
 }
+
+@media (max-width: 950px) {
+  .teamOverview__statistics {
+    width: 85vw;
+  }
+}
+
+@media (max-width: 480px) {
+  .teamOverview__statistics_container-box {
+    padding: 5px;
+  }
+
+  .teamOverview__statistics_container-box > div {
+    width: 200px;
+    font-size: small;
+    font-weight: bold;
+    border-left: 1px solid rgb(177, 177, 177);
+    padding-left: 10px;
+  }
+}
