--- a/src/components/teams/components/teamTransfer.css
+++ b/src/components/teams/components/teamTransfer.css
@@ -1,3 +1,7 @@
+.transfer_container {
+  width: 88vw;
+}
+
 .transfer_container_box {
   display: flex;
   flex-direction: row;
@@ -39,4 +43,50 @@
 .transfer_container_box-img {
   width: 100px;
   height: 100px;
+}
+
+@media (max-width: 1280px) {
+  .transfer_container_box-name {
+    font-size: large;
+    width: 18vw;
+    margin-left: 6vw;
+  }
+
+  .transfer_container_box > * {
+    margin-right: 50px;
+  }
+}
+
+@media (max-width: 880px) {
+  .transfer_container_box-name {
+    font-size: medium;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0vw;
+  }
+
+  .transfer_container_box_infoBox-arrow {
+    box-sizing: border-box;
+    font-size: 30px;
+  }
+
+  .transfer_container_box-img {
+    width: 50px;
+    height: 50px;
+    align-self: center;
+  }
+
+  .transfer_container_box_infoBox {
+    font-size: smaller;
+  }
+}
+
+@media (max-width: 600px) {
+  .transfer_container_box > * {
+    margin-right: 10px;
+  }
+
+  .transfer_container_box_infoBox {
+    font-size: xx-small;
+  }
 }
