--- a/src/components/teams/teamsPage.css
+++ b/src/components/teams/teamsPage.css
@@ -45,9 +45,23 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 30px;
 }
+
 .selectLeague {
   height: 100%;
   display: grid;
   grid-template-rows: 130px 1fr;
   justify-content: center;
+}
+
+@media (max-width: 770px) {
+  .team__fixturesNavigating-button {
+    width: 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .team__fixturesNavigating-button {
+    width: 50px;
+    font-size: x-small;
+  }
 }
